Fixed the z-index and layout positioning of the elements and canvas

--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -12,7 +12,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 0;
 }
 
 @keyframes rubberBand {
@@ -67,7 +67,7 @@ body {
     content: "𝒩";
     color: red;
     position: absolute;
-    z-index: 99;
+    z-index: 2;
     top: 9px;
     left: 6px;
 }
@@ -77,7 +77,9 @@ body {
 }
 
 .container {
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-left: 8.125rem;
     padding: 1rem;
     background-color: #1d1d1d;
@@ -85,10 +87,7 @@ body {
 }
 
 .title {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    padding-left: 3rem;
+    background-color: transparent;
     font-size: 6.4375rem;
     line-height: 6rem;
 }
@@ -108,6 +107,7 @@ body {
 .btn {
     outline: none;
     position: relative;
+    z-index: 0;
     padding: 1rem 3rem;
     font-family: 'Open Sans', sans-serif;
     background-color: transparent;
@@ -128,5 +128,6 @@ body {
     transform: skewX(-45deg);
     z-index: -1;
     background-color: red;
+    opacity: 0.7;
     transition: all 300ms linear;
 }
